--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -16,6 +16,8 @@ file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/lib/hal_plugins/)
 file(WRITE ${CMAKE_BINARY_DIR}/lib/hal_plugins/__init__.py "")
 install(FILES ${CMAKE_BINARY_DIR}/lib/hal_plugins/__init__.py DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY})
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
 FOREACH(subdir ${SUBDIRS})
     if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${subdir}/CMakeLists.txt")
