Fixed install include path of plugins

--- a/plugins/quine_mccluskey/CMakeLists.txt
+++ b/plugins/quine_mccluskey/CMakeLists.txt
@@ -20,7 +20,7 @@ if(PL_QUINE_MCCLUSKEY OR BUILD_ALL_PLUGINS)
     endif(APPLE AND CMAKE_HOST_APPLE)
     target_link_libraries(quine_mccluskey ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::pybind11 ${BUDDY_LIBRARY})
     install(TARGETS quine_mccluskey LIBRARY DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY})
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/quine_mccluskey/)
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/quine_mccluskey/include/)
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         add_sanitizers(quine_mccluskey)
     endif()
