--- a/plugins/example_gate_library/CMakeLists.txt
+++ b/plugins/example_gate_library/CMakeLists.txt
@@ -33,7 +33,7 @@ if(PL_DECORATOR_EXAMPLE_LIB OR BUILD_ALL_PLUGINS)
     endif()
     target_link_libraries(decorator_example_lib ${LINK_LIBS})
     install(TARGETS decorator_example_lib LIBRARY DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY})
-    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/decorator_example_lib/)
+    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/decorator_example_lib/include/)
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         add_sanitizers(decorator_example_lib)
     endif()
