Fixes for out of source plugin builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,6 +270,9 @@ set(LINK_LIBS ${CMAKE_DL_LIBS}
     ${Boost_LIBRARIES}
     )
 
+set(GRAPH_ALGORITHM_LIB graph_algorithm)
+set(QUINE_MCCLUSKY_LIB quine_mccluskey)
+
 option(BUILD_ALL_PLUGINS "BUILD_ALL_PLUGINS" OFF)
 option(BUILD_TESTS "BUILD_TESTS" ON)
 option(BUILD_COVERAGE "BUILD_COVERAGE" OFF)
