--- a/plugins/graph_algorithm/CMakeLists.txt
+++ b/plugins/graph_algorithm/CMakeLists.txt
@@ -8,21 +8,21 @@ if(PL_GRAPH_ALGORITHM OR BUILD_ALL_PLUGINS)
     file(GLOB_RECURSE GRAPH_ALGORITHM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
     file(GLOB_RECURSE PYTHON_BINDING_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/python_definitions.cpp)
 
-    add_library(graph_algorithm SHARED ${GRAPH_ALGORITHM_SRC} ${PYTHON_BINDING_LIB_SRC} ${GRAPH_ALGORITHM_INC})
+    add_library(${GRAPH_ALGORITHM_LIB} SHARED ${GRAPH_ALGORITHM_SRC} ${PYTHON_BINDING_LIB_SRC} ${GRAPH_ALGORITHM_INC})
 
     #Set shared library suffix for MacOS
     if(APPLE AND CMAKE_HOST_APPLE)
-        set_target_properties(graph_algorithm PROPERTIES SUFFIX ".so")
+        set_target_properties(${GRAPH_ALGORITHM_LIB} PROPERTIES SUFFIX ".so")
         if(APPLE AND CMAKE_HOST_APPLE)
-            set_target_properties(graph_algorithm PROPERTIES
+            set_target_properties(${GRAPH_ALGORITHM_LIB} PROPERTIES
                                   INSTALL_NAME_DIR ${PLUGIN_LIBRARY_INSTALL_DIRECTORY}
                                   )
         endif()
     endif(APPLE AND CMAKE_HOST_APPLE)
-    target_link_libraries(graph_algorithm ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::pybind11 ${BUDDY_LIBRARY})
-    install(TARGETS graph_algorithm LIBRARY DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY})
+    target_link_libraries(${GRAPH_ALGORITHM_LIB} ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::pybind11 ${BUDDY_LIBRARY})
+    install(TARGETS ${GRAPH_ALGORITHM_LIB} LIBRARY DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY})
     install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/graph_algorithm/include/)
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-        add_sanitizers(graph_algorithm)
+        add_sanitizers(${GRAPH_ALGORITHM_LIB})
     endif()
 endif()
