--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -161,7 +161,7 @@ if(WITH_GUI)
                 ${QM}
                 )
     add_definitions(-DQT_NO_KEYWORDS)
-    target_link_libraries(${GUI_NAME} ${LINK_LIBS} ${GRAPHVIZ_LIBRARIES} ${PYTHON_LIBRARIES} quine_mccluskey pybind11::embed Qt5::Widgets Qt5::Concurrent Qt5::Svg)
+    target_link_libraries(${GUI_NAME} ${LINK_LIBS} ${GRAPHVIZ_LIBRARIES} ${PYTHON_LIBRARIES} ${QUINE_MCCLUSKY_LIB} pybind11::embed Qt5::Widgets Qt5::Concurrent Qt5::Svg)
 
     install(TARGETS ${GUI_NAME} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
