--- a/plugins/quine_mccluskey/CMakeLists.txt
+++ b/plugins/quine_mccluskey/CMakeLists.txt
@@ -8,20 +8,20 @@ if(PL_QUINE_MCCLUSKEY OR BUILD_ALL_PLUGINS)
     file(GLOB_RECURSE QUINE_MCCLUSKEY_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
     file(GLOB_RECURSE PYTHON_BINDING_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/python_definitions.cpp)
 
-    add_library(quine_mccluskey SHARED ${QUINE_MCCLUSKEY_SRC} ${PYTHON_BINDING_LIB_SRC} ${QUINE_MCCLUSKEY_INC})
+    add_library(${QUINE_MCCLUSKY_LIB} SHARED ${QUINE_MCCLUSKEY_SRC} ${PYTHON_BINDING_LIB_SRC} ${QUINE_MCCLUSKEY_INC})
 
     #Set shared library suffix for MacOS
     if(APPLE AND CMAKE_HOST_APPLE)
-        set_target_properties(quine_mccluskey PROPERTIES SUFFIX ".so")
-        set_target_properties(decorator_example_lib PROPERTIES
+        set_target_properties(${QUINE_MCCLUSKY_LIB} PROPERTIES SUFFIX ".so")
+        set_target_properties(${QUINE_MCCLUSKY_LIB} PROPERTIES
                               INSTALL_NAME_DIR ${PLUGIN_LIBRARY_INSTALL_DIRECTORY}
                               )
 
     endif(APPLE AND CMAKE_HOST_APPLE)
-    target_link_libraries(quine_mccluskey ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::pybind11 ${BUDDY_LIBRARY})
-    install(TARGETS quine_mccluskey LIBRARY DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY})
+    target_link_libraries(${QUINE_MCCLUSKY_LIB} ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::pybind11 ${BUDDY_LIBRARY})
+    install(TARGETS ${QUINE_MCCLUSKY_LIB} LIBRARY DESTINATION ${PLUGIN_LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY})
     install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/quine_mccluskey/include/)
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-        add_sanitizers(quine_mccluskey)
+        add_sanitizers(${QUINE_MCCLUSKY_LIB})
     endif()
 endif()
