--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,7 +4,7 @@ pull_request_rules:
       - status-success=ci/gitlab/gitlab.com
       - "#approved-reviews-by>=1"
       - base=master
-      - label=="Ready to merge"
+      - label!="work in progress"
     actions:
       merge:
         method: merge
