--- a/installer/CMakeLists.txt
+++ b/installer/CMakeLists.txt
@@ -37,7 +37,7 @@ if (PACKAGE_DEB)
     set(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
     set(CPACK_DEBIAN_PACKAGE_DEPENDS "libboost-all-dev (>= 1.62)" "libstdc++6 (>= 6.3)" "libgomp1 (>= 6.3)" "libc6 (>= 2.24)" "libqt5widgets5 (>= 5.7)" "libqt5concurrent5 (>= 5.7)" "python3 (>= 3.6)" "python3-pybind11 (>= 2)" "libqt5svg5-dev (>= 5.9.5)" "python3-jedi (>= 0.11)")
     set(CPACK_DEBIAN_PACKAGE_BUILD_DEPENDS "pkg-config" "git" "devscripts" "dh-make" "pkgconf (>= 0.9)" "libboost-all-dev (>= 1.62)" "cmake (>= 3.7)" "g++ (>= 6.3)" "qt5-default (>= 5.7)" "libpython3.7-dev (>= 3.7)"  "libqt5svg5-dev (>= 5.9.5)" "python3-sphinx (>= 1.6)" "python3-sphinx-rtd-theme (>= 0.2)" "pybind11-dev (>=2.0)" "python3-pybind11 (>=2.0)" "rapidjson-dev (>=1.1.0)" "libspdlog-dev (>= 0.16.3)")
-    set(CPACK_DEBIAN_PACKAGE_CONFLICTS "")
+    set(CPACK_DEBIAN_PACKAGE_CONFLICTS "hal-plugins (<= 0.0.22)")
     if (NOT PPA_DEBIAN_VERSION)
         set(PPA_DEBIAN_VERSION ppa1)
     endif()
