--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,12 +168,24 @@ include(Subdirs)
 
 find_package(Sanitizers)
 
-find_package(OpenMP REQUIRED)
-if(OpenMP_FOUND)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+find_package(OPENMP REQUIRED)
+if(OPENMP_FOUND)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OPENMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPENMP_CXX_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OPENMP_EXE_LINKER_FLAGS}")
 endif()
+
+find_package(IGRAPH REQUIRED)
+if(HAVE_IGRAPH)
+    message(STATUS "Found following IGRAPH Libraries")
+    message(STATUS "    IGRAPH_INCLUDE_DIRS: ${IGRAPH_INCLUDES}")
+    message(STATUS "    IGRAPH_LIBRARIES: ${IGRAPH_LIBRARIES}")
+    include_directories(${IGRAPH_INCLUDES})
+    
+    add_definitions(-DIGRAPH_VERSION_MAJOR_GUESS=${IGRAPH_VERSION_MAJOR_GUESS})
+    add_definitions(-DIGRAPH_VERSION_MINOR_GUESS=${IGRAPH_VERSION_MINOR_GUESS})
+    add_definitions(-DIGRAPH_VERSION_PATCH_GUESS=${IGRAPH_VERSION_PATCH_GUESS})
+endif(IGRAPH_FOUND)
 
 set(Boost_USE_MULTITHREADED ON)
 find_package(Boost 1.58.0 COMPONENTS system filesystem graph REQUIRED)
@@ -237,7 +249,6 @@ if(UNIX)
     enable_cxx_compiler_flag_if_supported("-Wno-undef" "")
     enable_cxx_compiler_flag_if_supported("-fcolor-diagnostics" "")
     enable_cxx_compiler_flag_if_supported("-fdiagnostics-color=always" "")
-    enable_cxx_compiler_flag_if_supported("-Wunused-private-field" "")
 
     enable_cxx_compiler_flag_if_supported("-O0" "_DEBUG")
     enable_cxx_compiler_flag_if_supported("-g" "_DEBUG")
