--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,7 @@ if(OPENMP_FOUND)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OPENMP_EXE_LINKER_FLAGS}")
 endif()
 
-find_package(IGRAPH REQUIRED)
+find_package(IGraph REQUIRED)
 if(HAVE_IGRAPH)
     message(STATUS "Found following IGRAPH Libraries")
     message(STATUS "    IGRAPH_INCLUDE_DIRS: ${IGRAPH_INCLUDES}")
@@ -185,7 +185,7 @@ if(HAVE_IGRAPH)
     add_definitions(-DIGRAPH_VERSION_MAJOR_GUESS=${IGRAPH_VERSION_MAJOR_GUESS})
     add_definitions(-DIGRAPH_VERSION_MINOR_GUESS=${IGRAPH_VERSION_MINOR_GUESS})
     add_definitions(-DIGRAPH_VERSION_PATCH_GUESS=${IGRAPH_VERSION_PATCH_GUESS})
-endif(IGRAPH_FOUND)
+endif(HAVE_IGRAPH)
 
 set(Boost_USE_MULTITHREADED ON)
 find_package(Boost 1.58.0 COMPONENTS system filesystem graph REQUIRED)
