--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,11 +162,31 @@ elseif(NOT PkgConfig_FOUND)
     endif(APPLE AND CMAKE_HOST_APPLE)
 endif(PkgConfig_FOUND)
 
-add_subdirectory(deps/buddy-2.4)
-
 include(Subdirs)
 
 find_package(Sanitizers)
+
+# Find OpenMP
+if(APPLE)
+    set(OpenMP_LIBRARIES "/usr/local/opt/llvm/lib")
+    set(OpenMP_INCLUDES "/usr/local/opt/llvm/include")
+    if(CMAKE_C_COMPILER_ID MATCHES "Clang")
+        set(OpenMP_C "${CMAKE_C_COMPILER}")
+        set(OpenMP_C_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+        set(OpenMP_C_LIB_NAMES "libomp" "libgomp" "libiomp5")
+        set(OpenMP_libomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+        set(OpenMP_libgomp_LIBRARY ${OpenMP_C_LIB_NAMES})
+        set(OpenMP_libiomp5_LIBRARY ${OpenMP_C_LIB_NAMES})
+    endif()
+    if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(OpenMP_CXX "${CMAKE_CXX_COMPILER}")
+        set(OpenMP_CXX_FLAGS "-fopenmp=libomp -Wno-unused-command-line-argument")
+        set(OpenMP_CXX_LIB_NAMES "libomp" "libgomp" "libiomp5")
+        set(OpenMP_libomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+        set(OpenMP_libgomp_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+        set(OpenMP_libiomp5_LIBRARY ${OpenMP_CXX_LIB_NAMES})
+    endif()
+endif()
 
 find_package(OpenMP REQUIRED)
 if(OpenMP_FOUND)
@@ -174,6 +194,8 @@ if(OpenMP_FOUND)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
+
+add_subdirectory(deps/buddy-2.4)
 
 find_package(IGraph REQUIRED)
 if(HAVE_IGRAPH)
@@ -203,7 +225,7 @@ elseif(NOT Boost_FOUND)
     endif(APPLE AND CMAKE_HOST_APPLE)
 endif(Boost_FOUND)
 
-find_package(Threads REQUIRED)
+#find_package(Threads REQUIRED)
 
 find_package(RapidJSON REQUIRED)
 message(STATUS "Found rapidjson ${RAPIDJSON_INCLUDEDIR}")
