--- a/tests/googletest-CMakeLists.txt.in
+++ b/tests/googletest-CMakeLists.txt.in
@@ -10,6 +10,6 @@ ExternalProject_Add(googletest
                     BINARY_DIR "${CMAKE_BINARY_DIR}/googletest-build"
                     CONFIGURE_COMMAND ""
                     BUILD_COMMAND ""
-                    INSTALL_COMMAND ""
+                    INSTALL_COMMAND cmake -E echo "Skipping install step."
                     TEST_COMMAND ""
                     )
