Set new vhdl parser as default, keep old one as fallback (#180)
* fixxed parsing of escaped characters in signal names

* fixed bug in hdl_writer

* net merging now handles attributes correctly, added documentation

* parser

* added old vhdl parser

* fixed parser tests, fixed '\' in  writer and test

* added missing file

* removed redundant comparison

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,11 @@ CMakeScripts
 build/
 deps/buddy-2.4/autom4te.cache/
 .vagrant
-.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 .brew_home
 
 playbook.retry
