--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -18,12 +18,12 @@ add_executable(runTest-utils
 add_executable(runTest-plugin_manager
         plugin_manager.cpp)
 
-target_link_libraries(runTest-callback_hook   gtest gtest_main ${LINK_LIBS})
-target_link_libraries(runTest-log   gtest gtest_main ${LINK_LIBS})
-target_link_libraries(runTest-program_arguments   gtest gtest_main ${LINK_LIBS})
-target_link_libraries(runTest-program_options   gtest gtest_main ${LINK_LIBS})
-target_link_libraries(runTest-utils   gtest gtest_main ${LINK_LIBS})
-target_link_libraries(runTest-plugin_manager   gtest gtest_main ${LINK_LIBS})
+target_link_libraries(runTest-callback_hook   gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-log   gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-program_arguments   gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-program_options   gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-utils   gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-plugin_manager   gtest gtest_main ${LINK_LIBS} test_utils)
 
 
 add_test(runTest-callback_hook_test ${CMAKE_BINARY_DIR}/bin/runTest-callback_hook --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
