--- a/tests/hdl_parser/CMakeLists.txt
+++ b/tests/hdl_parser/CMakeLists.txt
@@ -5,8 +5,8 @@ add_executable(runTest-hdl_parser_vhdl_old
 add_executable(runTest-hdl_parser_verilog
         hdl_parser_verilog.cpp)
 
-target_link_libraries(runTest-hdl_parser_vhdl_old   gtest gtest_main ${LINK_LIBS})
-target_link_libraries(runTest-hdl_parser_verilog   gtest gtest_main ${LINK_LIBS})
+target_link_libraries(runTest-hdl_parser_vhdl_old   gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-hdl_parser_verilog   gtest gtest_main ${LINK_LIBS} test_utils)
 
 
 add_test(runTest-hdl_parser_vhdl_old ${CMAKE_BINARY_DIR}/bin/runTest-hdl_parser_vhdl_old --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
