--- a/tests/hdl_writer/CMakeLists.txt
+++ b/tests/hdl_writer/CMakeLists.txt
@@ -6,8 +6,8 @@ add_executable(runTest-hdl_writer_verilog
         hdl_writer_verilog.cpp)
 
 
-target_link_libraries(runTest-hdl_writer_vhdl   gtest gtest_main ${LINK_LIBS})
-target_link_libraries(runTest-hdl_writer_verilog   gtest gtest_main ${LINK_LIBS})
+target_link_libraries(runTest-hdl_writer_vhdl   gtest gtest_main ${LINK_LIBS} test_utils)
+target_link_libraries(runTest-hdl_writer_verilog   gtest gtest_main ${LINK_LIBS} test_utils)
 
 
 add_test(runTest-hdl_writer_vhdl ${CMAKE_BINARY_DIR}/bin/runTest-hdl_writer_vhdl --gtest_output=xml:${CMAKE_BINARY_DIR}/gtestresults-runBasicTests.xml)
