--- a/tests/test_utils/CMakeLists.txt
+++ b/tests/test_utils/CMakeLists.txt
@@ -9,3 +9,5 @@ add_library(
 )
 
 target_include_directories(test_utils PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+
+target_link_libraries(test_utils   gtest gtest_main ${LINK_LIBS})
