--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -267,7 +267,7 @@ if(${pybind11_FOUND})
     message(STATUS "Found pybind11 >= 2.2.4")
     include_directories(pybind11_INCLIDE_DIRS)
 else()
-    message(STATUS "Found pybind11 >= 2.2.4 not found")
+    message(STATUS "pybind11 >= 2.2.4 not found")
     add_subdirectory(deps/pybind11)
 endif()
 
@@ -276,7 +276,7 @@ message(STATUS "Found spdlog v${spdlog_VERSION}")
 if(${spdlog_FOUND})
     message(STATUS "Found spdlog >= 1.3.1")
 else()
-    message(STATUS "Found spdlog >= 1.3.1 not found")
+    message(STATUS "spdlog >= 1.3.1 not found")
     include_directories(${include_directories} "${CMAKE_CURRENT_SOURCE_DIR}/deps/spdlog-1.3.1/include")
     set(spdlog_VERSION 1.3.1)
 endif()
