--- a/plugins/gate_libraries/CMakeLists.txt
+++ b/plugins/gate_libraries/CMakeLists.txt
@@ -3,7 +3,7 @@ option(PL_GATE_LIBRARIES "PL_GATE_LIBRARIES" ON)
 if(PL_GATE_LIBRARIES OR BUILD_ALL_PLUGINS)
     # Add the include directory to the include search path
     file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/share/hal/gate_libraries/)
-    file(GLOB_RECURSE GATE_LIBS ${CMAKE_CURRENT_SOURCE_DIR}/definitions/*.json)
+    file(GLOB_RECURSE GATE_LIBS ${CMAKE_CURRENT_SOURCE_DIR}/definitions/*)
     message(STATUS "GATE_LIBS: ${GATE_LIBS}")
     foreach(file ${GATE_LIBS})
         get_filename_component(f ${file} NAME)
@@ -12,7 +12,7 @@ if(PL_GATE_LIBRARIES OR BUILD_ALL_PLUGINS)
     endforeach()
     add_custom_target(update_internal_gate_library_definitions ALL
                       BYPRODUCTS ${DESTINATION_GATE_LIBS}
-                      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/definitions/*.json ${CMAKE_BINARY_DIR}/share/hal/gate_libraries/
+                      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/definitions/* ${CMAKE_BINARY_DIR}/share/hal/gate_libraries/
                       DEPENDS ${SOURCE_GATE_LIBS}
                       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                       COMMENT "Update gate library definitions")
