Added custom plugin for plugin manager

--- a/tests/core/test_plugin/CMakeLists.txt
+++ b/tests/core/test_plugin/CMakeLists.txt
@@ -1,11 +1,11 @@
-
+set(TEST_PLUGIN_LIB "test_plugin")
 include_directories(${BUDDY_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(SYSTEM ${PYBIND11_INCLUDE_DIR} SYSTEM ${PYTHON_INCLUDE_DIRS})
 
 
 file(GLOB_RECURSE TEST_PLUGIN_INC ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
 file(GLOB_RECURSE TEST_PLUGIN_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
-file(GLOB_RECURSE PYTHON_BINDING_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/python_definitions.cpp)
+#file(GLOB_RECURSE PYTHON_BINDING_LIB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/python_definitions.cpp)
 
 add_library(${TEST_PLUGIN_LIB} SHARED ${TEST_PLUGIN_SRC} ${PYTHON_BINDING_LIB_SRC} ${TEST_PLUGIN_INC})
 
