--- a/plugins/igraph/CMakeLists.txt
+++ b/plugins/igraph/CMakeLists.txt
@@ -9,19 +9,19 @@ if(PL_IGRAPH OR BUILD_ALL_PLUGINS)
     file(GLOB_RECURSE IGRAPH_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
     file(GLOB_RECURSE IGRAPH_PYTHON_SRC ${CMAKE_CURRENT_SOURCE_DIR}/python/*.cpp)
 
-    add_library(igraph SHARED ${IGRAPH_SRC} ${IGRAPH_PYTHON_SRC} ${IGRAPH_INC})
+    add_library(igraph_converter SHARED ${IGRAPH_SRC} ${IGRAPH_PYTHON_SRC} ${IGRAPH_INC})
 
     if(APPLE AND CMAKE_HOST_APPLE)
-        set_target_properties(igraph PROPERTIES SUFFIX ".so")
-        set_target_properties(igraph PROPERTIES INSTALL_NAME_DIR ${PLUGIN_LIBRARY_INSTALL_DIRECTORY})
+        set_target_properties(igraph_converter PROPERTIES SUFFIX ".so")
+        set_target_properties(igraph_converter PROPERTIES INSTALL_NAME_DIR ${PLUGIN_LIBRARY_INSTALL_DIRECTORY})
     endif(APPLE AND CMAKE_HOST_APPLE)
 
-    target_link_libraries(igraph ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::module ${BUDDY_LIBRARY} ${IGRAPH_LIBRARIES})
+    target_link_libraries(igraph_converter ${LINK_LIBS} ${PYTHON_LIBRARIES} pybind11::module ${BUDDY_LIBRARY} ${IGRAPH_LIBRARIES})
 
-    install(TARGETS igraph LIBRARY DESTINATION ${LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
+    install(TARGETS igraph_converter LIBRARY DESTINATION ${LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
     install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION ${PLUGIN_INCLUDE_INSTALL_DIRECTORY}/igraph/include/)
 
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-        add_sanitizers(igraph)
+        add_sanitizers(igraph_converter)
     endif()
 endif()
