Fix missing keybind defaults for Python editor

--- a/defaults/guidefaults.ini
+++ b/defaults/guidefaults.ini
@@ -16,3 +16,10 @@ minimap=true
 [advanced]
 autosave=true
 autosave_interval=60
+
+[keybinds]
+python_create_file=Ctrl+Shift+N
+python_open_file=Ctrl+Shift+O
+python_run_file=Ctrl+R
+python_save_file=Ctrl+Shift+S
+python_save_file_as=Ctrl+Alt+S
