--- a/defaults/guidefaults.ini
+++ b/defaults/guidefaults.ini
@@ -18,8 +18,12 @@ autosave=true
 autosave_interval=60
 
 [keybinds]
+project_create_file=Ctrl+N
+project_open_file=Ctrl+O
+project_save_file=Ctrl+S
 python_create_file=Ctrl+Shift+N
 python_open_file=Ctrl+Shift+O
 python_run_file=Ctrl+R
 python_save_file=Ctrl+Shift+S
 python_save_file_as=Ctrl+Alt+S
+schedule_run=Ctrl+Shift+R
