--- a/defaults/guidefaults.ini
+++ b/defaults/guidefaults.ini
@@ -26,4 +26,5 @@ python_open_file=Ctrl+Shift+O
 python_run_file=Ctrl+R
 python_save_file=Ctrl+Shift+S
 python_save_file_as=Ctrl+Alt+S
+searchbar_toggle=Ctrl+F
 schedule_run=Ctrl+Shift+R
