Add natural sort order algo, add setting for sort order of module details

--- a/defaults/guidefaults.ini
+++ b/defaults/guidefaults.ini
@@ -6,6 +6,9 @@ move_modifier=33554432
 [main_style]
 theme=darcula
 
+[navigation]
+sort_mechanism=1
+
 [python]
 font_size=11
 highlight_current_line=true
