--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ file(GLOB_RECURSE GATE_TYPE_SYSTEM_SRC ${CMAKE_SOURCE_DIR}/src/gate_decorator_sy
 
 add_library(${NETLIST_LIB} SHARED ${NETLIST_LIB_HDR} ${HDL_PARSER_LIB_HDR} ${HDL_WRITER_LIB_HDR} ${NETLIST_LIB_SRC} ${HDL_PARSER_LIB_SRC} ${HDL_WRITER_LIB_SRC} ${GATE_TYPE_SYSTEM_SRC} ${GATE_TYPE_SYSTEM_INC})
 set_target_properties(${NETLIST_LIB} PROPERTIES DEFINE_SYMBOL API_NETLIST)
-target_link_libraries(${NETLIST_LIB} ${CORE_LIB} hal_bdd ${Boost_LIBRARIES})
+target_link_libraries(${NETLIST_LIB} ${CORE_LIB} ${Boost_LIBRARIES}) # TODO removed hal_bdd
 install(TARGETS ${NETLIST_LIB} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
         GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES
         DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
@@ -75,7 +75,7 @@ endif()
     if(APPLE AND CMAKE_HOST_APPLE)
         set_target_properties(${PYTHON_BINDING_LIB} PROPERTIES SUFFIX ".so")
     endif(APPLE AND CMAKE_HOST_APPLE)
-    target_link_libraries(${PYTHON_BINDING_LIB} ${LINK_LIBS} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} pybind11::module hal_bdd)
+    target_link_libraries(${PYTHON_BINDING_LIB} ${LINK_LIBS} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} pybind11::module) #TODO removed hal_bdd
     install(TARGETS ${PYTHON_BINDING_LIB} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         add_sanitizers(${PYTHON_BINDING_LIB})
@@ -161,7 +161,7 @@ if(WITH_GUI)
                 ${QM}
                 )
     add_definitions(-DQT_NO_KEYWORDS)
-    target_link_libraries(${GUI_NAME} ${LINK_LIBS} ${GRAPHVIZ_LIBRARIES} ${PYTHON_LIBRARIES} ${QUINE_MCCLUSKY_LIB} pybind11::embed Qt5::Widgets Qt5::Concurrent Qt5::Svg)
+    target_link_libraries(${GUI_NAME} ${LINK_LIBS} ${GRAPHVIZ_LIBRARIES} ${PYTHON_LIBRARIES} pybind11::embed Qt5::Widgets Qt5::Concurrent Qt5::Svg) #TODO removed ${QUINE_MCCLUSKY_LIB}
 
     install(TARGETS ${GUI_NAME} LIBRARY DESTINATION ${LIBRARY_INSTALL_DIRECTORY} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE INCLUDES DESTINATION ${INCLUDE_INSTALL_DIRECTORY})
     if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
@@ -170,7 +170,7 @@ if(WITH_GUI)
 
     # enable required plugins
     # Use set(xy ...) BEFORE option(xy ...)
-    set(PL_QUINE_MCCLUSKEY ON CACHE BOOL "PL_QUINE_MCCLUSKEY")
+    # set(PL_QUINE_MCCLUSKEY ON CACHE BOOL "PL_QUINE_MCCLUSKEY") #TODO remove
 endif(WITH_GUI)
 
 set(SRC main.cpp)
